--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <link rel="stylesheet" href="style.css">
         <script defer type="module" src="index.js"></script>
     </head>
-    <body></body>
+    <body>
+    </body>
 </html>
